feat: create FileStorageConstants class for file storage paths